--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,2 +1,5 @@
 [global.databases]
 prettycode_blog_db = { url= "postgres://postgres:dragon555@localhost/prettycode_blog_db"}
+
+[prod]
+port = $PORT
